--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
-    "jwtoken": "^0.0.0"
+    "jsonwebtoken": "^9.0.3",
   }
 }
